# ceno

./: .gitattributes  .gitignore  404.html  CLAUDE.md  Cargo.toml  Makefile  Makefile.toml  README.markdown  README.md  advanced-topics.html  aot-plan.md  appendix.html  architecture-overview.html  args.markdown  args2.markdown  ceno-cli.html  check  clippy  clippy.toml  concurrent-chip-proving.html  differences-from-risc-v.html  do_prof  examples-walkthrough.html  generating-and-verifying-proofs.html  getting-started.html  guest-programming.html  host-guest-interaction.html  index.html  integration  integration-with-ethereum.html  log.txt  memory-continuation-checks.html  on-chain-verification.html  optimizations.html  overview.html  precompiles.html  print.html  profiling.html  prover-network.html  prover-workflow.html  (+29 more)
ceno_cli/: Cargo.toml  build.rs
ceno_cli/example/: Cargo.toml
ceno_cli/src/: lib.rs  main.rs  sdk.rs  utils.rs
ceno_emul/: Cargo.toml
ceno_emul/src/: addr.rs  aot.rs  backend.rs  chunked_vec.rs  dense_addr_space.rs  elf.rs  emu_context.rs  gdb.rs  guest_profile.rs  host_utils.rs  inst.rs  inst_values.rs  lib.rs  platform.rs  rv32im.rs  rv32im_encode.rs  shards.rs  syscalls.rs  test.rs  test_utils.rs  tracer.rs  utils.rs  vm_state.rs
ceno_emul/tests/: test_elf.rs  test_vm_trace.rs
ceno_host/: Cargo.toml
ceno_host/examples/: sorting_prepare_witness.rs
ceno_host/src/: lib.rs
ceno_host/tests/: test_elf.rs  test_is_prime_pratt.rs
ceno_recursion/: Cargo.toml
ceno_recursion/src/: field_ext.rs  lib.rs
ceno_recursion_v2/: AGENTS.md  Cargo.toml  PLAN.md  build.rs  clippy.toml
ceno_recursion_v2/docs/: gkr_air_spec.md  jagged_reduction_spec.md  main_spec.md  proof_shape_spec.md  system_spec.md  tower_air_contract_findings.md  tower_air_review_checklist.md  tower_air_spec.md  tower_module_design.md  verifier_circuit_ownership.md
ceno_recursion_v2/scripts/: extract_air_keygen_meta.sh  group_bus_failures.py  run_cuda_tracegen_test.sh  run_e2e_test.sh
ceno_recursion_v2/src/: bn254.rs  bus.rs  lib.rs  tracegen.rs  utils.rs
ceno_rt/: Cargo.toml  README.md  ceno_link.x  memory.x  riscv32im-ceno-zkvm-elf.json
ceno_rt/.cargo/: config.toml
ceno_rt/examples/: ceno_rt_alloc.rs  ceno_rt_io.rs  ceno_rt_mem.rs  ceno_rt_mini.rs  ceno_rt_sort.rs
ceno_rt/src/: allocator.rs  crypto.rs  io.rs  lib.rs  main.rs  mmio.rs  params.rs  syscalls.rs
ceno_serde/: Cargo.toml  README.md
ceno_serde/src/: deserializer.rs  lib.rs  serializer.rs
ceno_zkvm/: Cargo.toml  Makefile.toml  build.rs  fib.txt  output  plan.markdown
ceno_zkvm/benches/: alloc.rs  bitwise_keccakf.rs  cpu_ecc_prover.rs  fibonacci.rs  fibonacci_witness.rs  is_prime.rs  keccak.rs  lookup_keccakf.rs  quadratic_sorting.rs  riscv_add.rs  sorting.rs  weierstrass_add.rs  weierstrass_double.rs  witgen_add_gpu.rs
ceno_zkvm/examples/: fibonacci.rs  fibonacci_elf.rs  riscv_add.rs  riscv_opcodes.rs
ceno_zkvm/src/: chip_handler.rs  circuit_builder.rs  e2e.rs  error.rs  expr.rs  expression.rs  instructions.rs  keygen.rs  lib.rs  scheme.rs  state.rs  stats.rs  structs.rs  uint.rs  utils.rs  virtual_polys.rs  witness.rs
derive/: Cargo.toml
derive/src/: lib.rs
examples/: Cargo.toml  Xargo.toml  try_build
examples/.cargo/: config.toml  riscv32im-ceno-zkvm-elf.json
examples/examples/: bincode_decode.rs  bn254_curve_syscalls.rs  bn254_fp2_syscalls.rs  bn254_fp_syscalls.rs  bn254_fptower_syscalls.rs  bn254_patched_fp.rs  bn254_precompile.rs  bn254_syscalls.rs  bubble_sorting.rs  ceno_rt_alloc.rs  ceno_rt_io.rs  ceno_rt_keccak.rs  ceno_rt_mem.rs  ceno_rt_memcpy.rs  ceno_rt_mini.rs  ceno_rt_secp256k1_add.rs  ceno_rt_stdlib.rs  ceno_rt_syscalls.rs  fib.rs  fibonacci.rs  hashing.rs  hints.rs  is_prime.rs  keccak_lib.rs  keccak_native.rs  keccak_no_syscall.rs  keccak_syscall.rs  keccak_xorin.rs  median.rs  quadratic_sorting.rs  secp256k1.rs  secp256k1_add_syscall.rs  secp256k1_decompress_syscall.rs  secp256k1_double_syscall.rs  secp256k1_ecrecover.rs  secp256k1_scalar_algebra.rs  secp256r1_scalar_algebra.rs  secp256r1_verify_prehash.rs  sha256.rs  sha_extend_syscall.rs  (+4 more)
ff_ext/: Cargo.toml
ff_ext/src/: babybear.rs  goldilock.rs  lib.rs  poseidon.rs
gkr/: Cargo.toml  Makefile.toml
gkr-graph/: Cargo.toml
gkr-graph/examples/: series_connection_alt._rs  series_connection_alt.rs
gkr-graph/src/: circuit_builder.rs  circuit_graph.rs  circuit_graph_builder.rs  error.rs  lib.rs  prover.rs  structs.rs  verifier.rs
gkr/benches/: keccak256.rs  keccak256_expander.rs
gkr/examples/: counter_in.rs  fake_hash_lookup_par.rs  keccak256-v2-wrong.rs  keccak256-v2.rs  keccak256.rs  series_connection.rs  wire_in_with_pad.rs
gkr/src/: circuit.rs  lib.rs  macros.rs  prover.rs  structs.rs  test.rs  utils.rs  verifier.rs
gkr_iop/: Cargo.toml
gkr_iop/benches/: bitwise_keccakf.rs  faster_keccak.rs  keccak_f.rs  lookup_keccakf.rs
gkr_iop/examples/: multi_layer_logup.rs  multi_layer_logup_table.rs
gkr_iop/src/: chip.rs  circuit_builder.rs  error.rs  evaluation.rs  gkr.rs  hal.rs  lib.rs  selector.rs  utils.rs
goldilocks/: Cargo.toml
goldilocks/benches/: bench.rs
goldilocks/src/: field.rs  fp.rs  fp2.rs  fp3.rs  lib.rs  tests.rs
guest/: Cargo.toml  my-target.json  run  target.json  target2.json
guest/.cargo/: config.toml  riscv32im-mozak-mozakvm-elf.json
guest/examples/: Cargo.toml
guest/src/: main.rs
host/: Cargo.toml
host/src/: main.rs
interpreter/: Cargo.toml
interpreter/examples/: simple.rs
interpreter/src/: host.rs  interpreter.rs  lib.rs
mpcs/: Cargo.toml  compile-error.md
mpcs/benches/: basecode.rs  basefold.rs  commit.rs  commit_open_verify.rs  commit_open_verify_basecode.rs  commit_open_verify_rs.rs  fft.rs  hashing.rs  interpolate.rs  merkle.rs  ntt.rs  rscode.rs  utils.rs  whir.rs
mpcs/src/: basefold.rs  commit.rs  (+16 more)
multilinear_extensions/: Cargo.toml
p3/: Cargo.toml
poseidon/: Cargo.toml
protocol/: Cargo.toml
simple-frontend/: Cargo.toml
singer/: Cargo.toml
singer-utils/: Cargo.toml
singer_basic/: Cargo.toml
subprotocols/: Cargo.toml
sumcheck/: Cargo.toml
(+1347 files in other folders)
