[package]
categories.workspace = true
description = "cargo-ceno cli tools"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "cargo-ceno"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std", "backtrace"] }
bincode.workspace = true
cargo_metadata = "0.19"
clap.workspace = true
console = "0.15"
get_dir = "0.4"
parse-size = "1.1"
serde.workspace = true
tempfile = "3.19"
tracing.workspace = true
tracing-forest.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(unix)'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

ceno_emul = { path = "../ceno_emul" }
ceno_host = { path = "../ceno_host" }
ceno_zkvm = { path = "../ceno_zkvm" }
ff_ext = { git = "https://github.com/scroll-tech/ceno", package = "ff_ext", rev = "7adb306" }
mpcs = { git = "https://github.com/scroll-tech/ceno", package = "mpcs", rev = "7adb306" }

[build-dependencies]
vergen-git2 = { version = "1", features = ["build", "cargo", "rustc", "emit_and_set"] }

[features]
jemalloc = ["dep:tikv-jemallocator", "ceno_zkvm/jemalloc"]
jemalloc-prof = ["jemalloc", "tikv-jemallocator?/profiling"]
nightly-features = [
  "ceno_zkvm/nightly-features",
  "ff_ext/nightly-features",
  "mpcs/nightly-features",
]
