[package]
categories.workspace = true
description = "cargo-ceno cli tools"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "cargo-ceno"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std", "backtrace"] }
bincode.workspace = true
cargo_metadata = "0.19"
clap.workspace = true
console = "0.15"
get_dir = "0.4"
parse-size = "1.1"
serde.workspace = true
tempfile = "3.19"
tracing.workspace = true
tracing-forest.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(unix)'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

ceno_emul = { path = "../ceno_emul" }
ceno_host = { path = "../ceno_host" }
ceno_recursion = { path = "../ceno_recursion" }
ceno_zkvm = { path = "../ceno_zkvm" }

# openvm
openvm-circuit = { git = "https://github.com/scroll-tech/openvm.git", branch = "feat/ceno_leaves", default-features = false, features = ["bench-metrics"] }
openvm-continuations = { git = "https://github.com/scroll-tech/openvm.git", branch = "feat/ceno_leaves", default-features = false }
openvm-native-circuit = { git = "https://github.com/scroll-tech/openvm.git", branch = "feat/ceno_leaves", default-features = false }
openvm-native-compiler = { git = "https://github.com/scroll-tech/openvm.git", branch = "feat/ceno_leaves", default-features = false }
openvm-native-compiler-derive = { git = "https://github.com/scroll-tech/openvm.git", branch = "feat/ceno_leaves", default-features = false }
openvm-sdk = { git = "https://github.com/scroll-tech/openvm.git", branch = "feat/ceno_leaves", default-features = false, features = ["evm-prove"] }
openvm-stark-backend = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v1.1.1", default-features = false }
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v1.1.1", default-features = false }

ff_ext.workspace = true
gkr_iop = { path = "../gkr_iop" }
mpcs.workspace = true

[build-dependencies]
vergen-git2 = { version = "1", features = ["build", "cargo", "rustc", "emit_and_set"] }

[features]
jemalloc = ["dep:tikv-jemallocator", "ceno_zkvm/jemalloc"]
jemalloc-prof = ["jemalloc", "tikv-jemallocator?/profiling"]
nightly-features = [
  "ceno_zkvm/nightly-features",
  "ff_ext/nightly-features",
  "mpcs/nightly-features",
]
