[package]
categories.workspace = true
description = "A Risc-V emulator for Ceno"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "ceno_emul"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
ceno_rt = { path = "../ceno_rt" }
ceno_syscall = { path = "../ceno_syscall" }
elf = "0.7"
ff_ext.workspace = true
itertools.workspace = true
multilinear_extensions.workspace = true
num.workspace = true
num-derive.workspace = true
num-traits.workspace = true
rayon.workspace = true
rrs_lib = { package = "rrs-succinct", version = "0.1.0" }
rustc-hash.workspace = true
secp.workspace = true
serde.workspace = true
smallvec.workspace = true
sp1-curves.workspace = true
strum.workspace = true
strum_macros.workspace = true
substrate-bn.workspace = true
tiny-keccak.workspace = true
tracing.workspace = true
typenum = "1.19.0"

[features]
default = ["forbid_overflow"]
forbid_overflow = []
u16limb_circuit = []
