[package]
categories.workspace = true
description = "A Risc-V emulator for Ceno"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "ceno_emul"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
ceno_rt = { path = "../ceno_rt" }
ceno_syscall.workspace = true
elf = "0.7"
ff_ext.workspace = true
itertools.workspace = true
multilinear_extensions.workspace = true
num.workspace = true
num-derive.workspace = true
num-traits.workspace = true
once_cell.workspace = true
rayon.workspace = true
rrs_lib = { package = "rrs-succinct", version = "0.1.0" }
rustc-hash.workspace = true
# TODO clean up secp and only use k256 from elliptic-curves
k256 = { git = "https://github.com/scroll-tech/elliptic-curves", branch = "ceno/k256-13.4", default-features = false, features = ["std", "ecdsa"] }
secp = { workspace = true }
serde.workspace = true
smallvec.workspace = true
sp1-curves.workspace = true
strum.workspace = true
strum_macros.workspace = true
substrate-bn.workspace = true
tiny-keccak.workspace = true
tracing.workspace = true
typenum.workspace = true

[features]
default = ["forbid_overflow"]
forbid_overflow = []
u16limb_circuit = []
