[package]
categories.workspace = true
description = "Support for the host port of a Ceno application"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "ceno_host"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
itertools.workspace = true
rkyv = { version = "0.8.9", default-features = false, features = ["alloc", "bytecheck"] }

[dev-dependencies]
rand.workspace = true
