[package]
categories.workspace = true
description = "Support for the host port of a Ceno application"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "ceno_host"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
ceno_serde = { path = "../ceno_serde" }
ceno_emul = { path = "../ceno_emul" }
itertools.workspace = true
serde.workspace = true
tiny-keccak.workspace = true

[dev-dependencies]
ceno-examples = { path = "../examples-builder" }
rand.workspace = true
