[package]
categories.workspace = true
description = "Ceno Recursion"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "ceno_recursion"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
bincode.workspace = true
ceno-examples = { path = "../examples-builder" }
ceno_emul = { path = "../ceno_emul" }
ceno_host = { path = "../ceno_host" }
ceno_zkvm = { path = "../ceno_zkvm" }
clap.workspace = true
ff_ext.workspace = true
gkr_iop = { path = "../gkr_iop" }
itertools.workspace = true
mpcs.workspace = true
multilinear_extensions.workspace = true
p3.workspace = true
parse-size = "1.1"
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sumcheck.workspace = true
tracing.workspace = true
tracing-forest.workspace = true
tracing-subscriber.workspace = true
transcript.workspace = true
whir.workspace = true
witness.workspace = true
openvm.workspace = true
openvm-circuit.workspace = true
openvm-continuations.workspace = true
openvm-instructions.workspace = true
openvm-native-circuit.workspace = true
openvm-native-compiler.workspace = true
openvm-native-compiler-derive.workspace = true
openvm-native-recursion.workspace = true
openvm-rv32im-circuit.workspace = true
openvm-sdk.workspace = true
openvm-stark-sdk.workspace = true
openvm-stark-backend.workspace = true
openvm-cuda-backend = { workspace = true, optional = true }

p3-monty-31 = { git = "https://github.com/Plonky3/Plonky3.git", rev = "539bbc84085efb609f4f62cb03cf49588388abdb" }

[[bin]]
name = "e2e_aggregate"
path = "src/bin/e2e_aggregate.rs"

[features]
bench-metrics = ["openvm-circuit/metrics"]
default = ["parallel", "nightly-features", "openvm-circuit/metrics"]
gpu = ["openvm-circuit/cuda", "openvm-native-circuit/cuda", "dep:openvm-cuda-backend"]
nightly-features = [
  "ceno_zkvm/nightly-features",
  "openvm-stark-sdk/nightly-features",
]
parallel = ["openvm-stark-backend/parallel"]
